# Vermo

./: Cargo.toml  README.md  acoes_modulo.js  estilo.css  index.html  vermo.d.ts  vermo.js  vermo_bevy_bg.wasm.d.ts  vermo_bg.wasm.d.ts
modelos/: vermo.blend  vermo.glb
src/: camera.rs  cena.rs  grade.rs  main.rs  modelo.rs  ui.rs  web.rs
web/: entrada_numerica.js  index.html  vermo_bevy.d.ts  vermo_bevy.js
