[package]
name = "vermo_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.14"
bevy = { version = "0.18.0", features = ["bevy_gltf"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "console", "Document", "Element", "HtmlElement"] }
wasm-bindgen = "0.2"

